src/css/main.css
/* ... */
.search input {
  background: #222;
  border-radius: 5px;
  height: 22px;
  text-indent: 10px;
  width: 216px;
}

.search .fa-search {
  position: absolute;
  right: 11px;
  top: 10px;
}

.search .fa-times {
  position: absolute;
  right: 32px;
  top: 10px;
}

input {
  background-color: transparent;
  border: 1px solid #555;
  color: #fff;
}

input,
.texture canvas {
  transition: 0.1s background-color ease-in-out, 0.1s border-color ease-in-out, 0.1s color ease-in-out;
}

input[type=text],
input[type=number],
input.string,
input.number {
  min-height: 14px;
  outline: none;
}

input.number {
  background-color: transparent !important;
  border: 0;
  color: #20b1fb !important;
  cursor: col-resize;
  font-size: 12px;
  padding: 2px;
}

input.string:focus,
input.number:focus {
  border: 1px solid #20b1fb;
  color: #fff;
  cursor: auto;
}

input.error {
  border: 1px solid #a00;
}

#left-sidebar {
  background: #2b2b2b;
  bottom: 0;
  display: flex;
  flex-direction: column;
  height: 100%;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 230px;
}

#sidebar {
  background: #2b2b2b;
  width: 330px;
}

#sidebar * {
  vertical-align: middle;
}

input,
textarea,
select {
  background: #222;
  border: 1px solid transparent;
  color: #888;
}

.row {
  margin-bottom: 10px;
  min-height: 20px;
}

input[type=color] {
  background-color: #333;
  border: 1px solid #111;
  cursor: pointer;
}

.texture canvas {
  border: 1px solid #222;
  cursor: pointer;
}

.texture canvas:hover {
  border-color: #1faaf2;
}

input[type=color] {
  cursor: pointer;
  height: 16px;
  padding: 0;
  width: 64px;
}

/* Note: these vendor-prefixed selectors cannot be grouped! */
input[type=color]::-webkit-color-swatch {
  border: 0;  /* To remove the gray border. */
}

input[type=color]::-webkit-color-swatch-wrapper {
  padding: 0;  /* To remove the inner padding. */
}

input[type=color]::-moz-color-swatch {
  border: 0;
}

input[type=color]::-moz-focus-inner {
  border: 0;  /* To remove the inner border (specific to Firefox). */
  padding: 0;
}

.components {
  background-color: #323232;
  color: #bcbcbc;
  height: 100%;
  overflow: auto;
  position: fixed;
  width: 330px;
}

div.vec2,
div.vec3,
div.vec4, {
  display: inline;
}

.vec2 input.number,
.vec3 input.number,
.vec4 input.number {
  width: 46px;
}

.collapsible-header {
  display: flex;
  justify-content: space-between;
}

.component-title span {
  float: left;
  max-width: 110px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.collapsible .static {
  background-color: #323232;
  border-bottom: 1px solid #262626;
  border-top: 1px solid #262626;
  color: #fff;
  height: 16px;
  padding: 10px;
  vertical-align: middle;
}

.collapsible .menu {
  text-align: right;
}

.collapsible .menu::after {
  color: #bbb;
  content: '\2807';
  font-size: 12px;
  padding: 5px;
  text-align: right;
}

.collapsible .static .collapse-button {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  float: left;
  height: 0;
  margin-right: 10px;
  margin-top: 2px;
  width: 0;
}

.collapsible.collapsed .static .collapse-button {
  border-left-color: #bbb;
}

.collapsible:not(.collapsed) .static .collapse-button {
  border-top-color: #bbb;
}

.collapsible .content {
  background-color: #2b2b2b;
  padding: 10px;
}

.components .row {
  margin-bottom: 10px;
  min-height: 20px;
}

.components * {
  vertical-align: middle;
}

.components .row .text {
  cursor: default;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
  width: 120px;
}

.components .row .map_value {
  margin: 0 0 0 5px;
  width: 68px;
}

.hidden {
  visibility: hidden;
}

.uploader-normal-button .hidden {
  display: none;
}

.texture canvas + input {
  margin-left: 5px;
}

.texture .fa {
  padding-right: 5px;
}

.texture .fa-external-link {
  font-size: 14px;
  padding-top: 2px;
}

.scenegraph-bottom {
  background-color: #323232;
  border-top: 1px solid #111;
  bottom: 10;
  height: 40px;
  left: 0;
  z-index: 100;
}

a.button {
  color: #bcbcbc;
  font-size: 16px;
  margin-left: 10px;
  text-decoration: none;
}

a.button:hover {
  color: #1faaf2;
}

.scenegraph-bottom a {
  float: right;
  margin: 10px;
}

.modal {
  animation: animateopacity 0.2s ease-out;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  height: 100%;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9999;
}

.modal h3 {
  font-size: 18px;
  font-weight: 100;
  margin: 0.6em 0;
}

#texture-modal .modal-content {
  height: calc(100% - 50px);
  width: calc(100% - 50px);
}

.modal-content {
  animation: animatetop 0.2s ease-out;
  animation-duration: 0.2s;
  animation-name: animatetop;
  background-color: #232323;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
  margin: auto;
  overflow: hidden;
  padding: 0;
}

@keyframes animateopacity {
  from { opacity: 0; }
  to { opacity: 1; }
}

.close {
  color: white;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #08f;
  cursor: pointer;
  text-decoration: none;
}

.modal-header {
  color: white;
  padding: 2px 16px;
}

.modal-body {
  overflow: auto;
  padding: 16px;
}

.modal-footer {
  color: white;
  padding: 2px 16px;
}

/* Gallery */
.gallery {
  background: #232323;
  display: flex;
  flex-wrap: wrap;
  margin: 15px auto 0;
  max-height: 50vh;
  overflow: auto;
  padding: 15px 3px 3px;
}

.newimage .gallery {
  padding: 16px;
}

.gallery li {
  border-radius: 2px;
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
  cursor: pointer;
  margin: 8px;
  overflow: hidden;
  width: 155px;
}

.gallery li.selected,
.gallery li:hover {
  box-shadow: 0 0 0 2px #1eaaf1;
}

.gallery li .detail {
  background-color: #323232;
  margin: 0;
  min-height: 60px;
  padding: 3px 10px;
}
/* ... */

